CI.yml: fetch-depth: 0

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,6 +18,7 @@ jobs:
         name: Checkout
         uses: actions/checkout@v4
         with:
+            fetch-depth: 0
             submodules: recursive
       -
         name: Login to Docker Hub
