--- a/.gitmodules
+++ b/.gitmodules
@@ -41,3 +41,6 @@
 [submodule "winetricks"]
 	path = winetricks
 	url = https://github.com/Winetricks/winetricks.git
+[submodule "llknife"]
+	path = llknife
+	url = git@github.com:jove-decompiler/llknife.git
