--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -65,6 +65,7 @@ set(JOVE_TOOL_FLAGS
 
   "-D_GNU_SOURCE"
   "-D_FILE_OFFSET_BITS=64"
+  "-D_LARGEFILE64_SOURCE"
 
   "-DBOOST_ICL_USE_STATIC_BOUNDED_INTERVALS"
   "-DBOOST_UNORDERED_DISABLE_REENTRANCY_CHECK"
