--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -127,6 +127,7 @@ endif()
 set(JOVE_SOURCES
     ../core/death.cpp # PR_SET_PDEATHSIG before any threads are created
     ../core/tbb_hacks.cpp # we'd like to have this first to disable TBB...
+    ../core/autoreap.cpp
     ../core/B.cpp
     ../core/add.cpp
     ../core/analyze.cpp
