bootstrap: single map (trapmap) ; bootstrap: style (emulate.{cpp,h}) ; explorer: newbb proc takes bbprop_t ; fallthru: return result ; ptrace: _jove_sys_ptrace()

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -141,6 +141,7 @@ set(JOVE_SOURCES
     ../core/byval.cpp
     ../core/disas.cpp
     ../core/elf.cpp
+    ../core/emulate.cpp
     ../core/except.cpp
     ../core/explore.cpp
     ../core/fd.cpp
