--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -319,6 +319,7 @@ function(tool_for_arch arch arch_extra_cflags qemu_build_dir)
   endif()
 
   target_include_directories(jove-${arch} PRIVATE
+    ${JOVE_SRC_DIR}/core/arch/${arch}
     ${JOVE_SRC_DIR}/lib/arch/${arch}
     ${JOVE_SRC_DIR}/bin/${arch}
     ${JOVE_SRC_DIR}/bin
