--- a/.gitmodules
+++ b/.gitmodules
@@ -21,7 +21,7 @@
 [submodule "qemu"]
 	path = qemu
 	url = https://github.com/jove-decompiler/qemu.git
-	branch = jove16b
+	branch = jove0
 [submodule "mk-deb-vm"]
 	path = mk-deb-vm
 	url = https://github.com/jove-decompiler/mk-deb-vm.git
@@ -40,7 +40,7 @@
 [submodule "linux"]
 	path = linux
 	url = https://github.com/jove-decompiler/linux.git
-	branch = jove16b
+	branch = jove0
 [submodule "wine"]
 	path = wine
 	url = https://github.com/jove-decompiler/wine.git
